# kixtart-mode

./: .dir-locals.el  .gitignore  ChangeLog  Makefile  Makefile.am  README  bootstrap  configure.ac  kixtart-docstrings.el  kixtart-mode-tests.el  kixtart-mode.el  syntax.kix
doc/: README.texi  example-configuration.texi  features.texi  installation.texi  kixtart-mode.texi  version.texi
resources/: font-lock-level-1.kix  font-lock-level-2.kix  font-lock-level-3.kix
