AC_PREREQ([2.71])
AC_INIT([kixtart-mode], m4_normalize(m4_include([VERSION])))
AC_CONFIG_AUX_DIR([build-aux])

AM_INIT_AUTOMAKE([-Werror -Wall foreign])
AM_SILENT_RULES([yes])
AM_PATH_LISPDIR

AC_CONFIG_SRCDIR([kixtart-mode.el])
AC_CONFIG_FILES([Makefile])
AC_OUTPUT

cat << EOF

$PACKAGE_NAME $PACKAGE_VERSION

EOF
